# uri2ops

./: CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
config/: runtime_environments.yaml
examples/: 12_android_operator  13_pcwin_operator  36_physical_ops  _lib.sh  run_all.sh
examples/10_browser_operator/: ABOUT.md  README.md  run.sh  task.health.yaml
examples/16_nl2uri_operator_bridge/: README.md  run.sh  workflow.health.yaml
output/artifacts/operator/: 1781539093525_observe.json  1781539093527_type.json
tests/: conftest.py  test_graph_bridge.py  test_operation_registry.py  test_physical_ops.py
uri2ops/: __init__.py  cli.py
uri2ops/operation_registry/: uri_mapping.py
uri2ops/operator/: artifact_resolver.py  policy_loader.py  redaction.py  runner.py  task.py  validator.py
uri2ops/operator/environments/: __init__.py  docker_browser.py  router.py
uri2ops/remote_registry/: loader.py
uri2ops/server/: runtime_profiles.py
uri2ops/server/routes/: a2a.py  registry.py  tasks.py
