[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2ops"
version = "0.5.11"
description = "URI Operation Registry and Operator Runtime"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "pyyaml>=6.0",
    "typer>=0.26.7",
]

[project.optional-dependencies]
browser = ["playwright>=1.40"]
windows = ["pywinauto>=0.6"]
server = ["uvicorn>=0.27"]

[project.scripts]
uri2ops = "uri2ops.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uri2ops*"]

[tool.setuptools.package-data]
uri2ops = [
    "operation_registry/*.yaml",
    "schemas/*.json",
]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
